# incipyt

./: .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  publish.yml  release-please.yml  test.yml
incipyt/: __init__.py  __main__.py  cli.py  commands.py  hooks.py  os.py  project.py  signals.py  system.py  variables.py
incipyt/_internal/: dumpers.py  sanitizers.py  templates.py  utils.py
incipyt/actions/: __init__.py  base.py  git.py  setuptools.py  venv.py
incipyt/project/: __init__.py  environment.py  meta_variables.py  structure.py
incipyt/templates/: README.md
incipyt/templates/licenses/: BSD-2-Clause.txt  BSD-3-Clause.txt  Copyright.txt  GPL-2.0.txt  GPL-3.0.txt  LGPL-2.0.txt  LGPL-2.1.txt  MIT.txt
incipyt/tools/: __init__.py  base.py  git.py  license.py  poetry.py  pyenv.py  setuptools.py  venv.py
incipyt/tools/pep517/: __init__.py  base.py  flit.py  hatch.py  pdm.py  setuptools.py
incipyt/variables/: __init__.py  metadata_setter.py
tests/: test_dumpers.py  test_module.py  test_project.py  test_renderers.py  test_system.py  test_templates.py  test_utils.py  utils.py
tests/test_tools/: test_git.py  test_setuptools.py  testing.py
