[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project.urls]
documentation = "https://github.com/NotANameServer/incipyt/wiki"
homepage = "https://pypi.org/incipyt"
repository = "https://github.com/NotANameServer/incipyt"

[project]
authors = [
  {name = "Not at Name", email = "julien@drlazor.be"},
]
description = "incipyt is a command-line tool that bootstraps a python project."
maintainers = [
  {name = "Not at Name", email = "julien@drlazor.be"},
]
name = "incipyt"
readme = "README.md"
requires-python = ">=3.7, <4.0"
version = "0.2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
]
dependencies = [
  "click",
  "signalslot",
  "toml",
]

[project.optional-dependencies]
dev = [
  "flit==3.8.0",
  "pre-commit==3.2.1",
]
doc = [
  "m2r2==0.3.3.post2",
  "sphinxcontrib-apidoc==0.3.0",
  "sphinx_rtd_theme==1.2.0",
]
test = [
  "pytest-cov==4.0.0",
  "pytest-subprocess==1.5.0",
]

[project.scripts]
incipyt = "incipyt.__main__:main"

[tool.black]
line-length = 98 # Compatibility with GitHub web editor

[tool.ruff]
fixable = [
  "B", "C4", "D", "E", "ERA", "F", "G", "I", "PIE", "PLC", "Q", "RUF", "SIM", "W",
]
format = "github"
ignore = ["B024", "B027", "D105", "D107", "D203", "D211", "D213", "E501", "FBT002", "W505"]
select = [
  "B", "C4", "D", "E", "ERA", "F", "G", "I", "PIE", "PLC", "Q", "RUF", "SIM", "W",
  "A", "BLE", "FBT", "ISC", "N", "PLW", "PTH", "S", "YTT",
]
show-fixes = true
show-source = true

[tool.ruff.per-file-ignores]
"incipyt/_*/*.py" = ["D"]
"tests/**/*.py" = ["D"]
"incipyt/__*__.py" = ["D100", "D103", "D104"]
"incipyt/tools/*.py" = ["D100"]
"incipyt/**/__init__.py" = ["F401"]
"tests/**/test_*.py" = ["S101"]
"incipyt/templates/**/*.py" = ["D", "N999"]
