[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project.urls]
documentation = "https://github.com/NotANameServer/incipyt/wiki"
homepage = "https://pypi.org/incipyt"
repository = "https://github.com/NotANameServer/incipyt"

[project]
authors = [
  {name = "Not at Name", email = "julien@drlazor.be"},
]
description = "incipyt is a command-line tool that bootstraps a python project."
maintainers = [
  {name = "Not at Name", email = "julien@drlazor.be"},
]
name = "incipyt"
readme = "README.md"
requires-python = ">=3.7, <4.0"
version = "0.2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
]
dependencies = [
  "click",
  "signalslot",
  "toml",
]

[project.optional-dependencies]
dev = [
  "black",
  "build",
  "pre-commit==3.2.1",
]
doc = [
  "m2r2",
  "sphinxcontrib-apidoc",
  "sphinx_rtd_theme",
]
test = [
  "pytest-cov",
  "pytest-subprocess",
]

[project.scripts]
incipyt = "incipyt.__main__:main"
