[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project.urls]
documentation = "https://github.com/NotANameServer/incipyt/wiki"
homepage = "https://pypi.org/incipyt"
repository = "https://github.com/NotANameServer/incipyt"

[project]
authors = [
  {name = "Not at Name", email = "julien@drlazor.be"},
]
description = "incipyt is a command-line tool that bootstraps a python project."
maintainers = [
  {name = "Not at Name", email = "julien@drlazor.be"},
]
name = "incipyt"
readme = "README.md"
requires-python = ">=3.8, <4.0"
version = "0.4.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
]
dependencies = [
  "click",
  "signalslot",
  "tomli_w",
  "tomli; python_version<'3.11'"
]

[project.optional-dependencies]
dev = [
  "flit==3.9.0",
  "pre-commit==3.3.2",
]
doc = [
  "m2r2==0.3.2",
  "sphinxcontrib-apidoc==0.3.0",
  "sphinx_rtd_theme==1.2.1",
]
test = [
  "pytest-cov==4.1.0",
  "pytest-subprocess==1.5.0",
]

[project.scripts]
incipyt = "incipyt.__main__:main"

[tool.black]
line-length = 98 # Compatibility with GitHub web editor

[tool.ruff]
fixable = [
  "B", "C4", "D", "E", "ERA", "F", "G", "I", "PIE", "PLC", "Q", "RUF", "SIM", "W",
]
format = "github"
ignore = [
  "B024", "B027", # Disable rules about missing abstract decorators
  "D100", "D104", "D105", "D107", "D203", "D211", "D213",
  # Ease rules for pydocstyle (module/package/magic method/empty lines)
  "E501", "W505", # Disable rules about line-too-long, black does that
  "FBT002", #Disable "Boolean default value in function definition" rule
  "PLC1901",  # Disable "(value == '') can be simplified to (not value)"
]
select = [
  "B", "C4", "D", "E", "ERA", "F", "G", "I", "PIE", "PLC", "Q", "RUF", "SIM", "W",
  "A", "BLE", "FBT", "ISC", "N", "PLW", "PTH", "S", "YTT",
]
show-fixes = true
show-source = true

[tool.ruff.per-file-ignores]
# Disable pydocstyle for internal modules
"incipyt/**/__*__.py" = ["D"]
"incipyt/**/_*/**/*.py" = ["D"]
# Disable pydocstyle for template files
"incipyt/templates/**/*.py" = ["D", "N999"]
"tests/**/*.py" = ["D"] # Disable pydocstyle for python test files
"incipyt/**/__init__.py" = ["F401"] # Disable "unused-import" in __init__ files
"tests/**/test_*.py" = ["S101"] # Disable detection of assert usage in python test files
